# gewe-notice-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.js  package.json
.githooks/: AGENTS.md  pre-commit
.github/: AGENTS.md
.github/workflows/: release.yml
docs/GeWe-API-docs/: postFile.md  postImage.md  postText.md  postVoice.md
scripts/: CLAUDE.md  bump-version.js  install.js
src/: AGENTS.md  config.rs  errors.rs  gewe_api.rs  lib.rs  main.rs  server.rs
src/upload_server/: config.rs  error.rs  http.rs  storage.rs
src/uploader/: mod.rs  s3.rs  server.rs
tests/: AGENTS.md  http_integration.rs
