[package]
name = "gewe-notice-mcp"
version = "0.0.3"
edition = "2021"
authors = ["wangnov"]
description = "一个轻量级的 MCP 服务器，用于通过gewe微信机器人发送 AI 任务状态通知。"
license = "MIT"
repository = "https://github.com/wangnov/gewe-notice-mcp"
keywords = ["mcp", "ai", "notification", "gewe"]

[[bin]]
name = "gewe-notice-mcp"
path = "src/main.rs"

[dependencies]
# MCP Protocol
rmcp = { version = "0.6", features = ["transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }

# UUID handling
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Random number generation
rand = "0.8"

[dev-dependencies]
axum = { version = "0.7", features = ["macros"] }
once_cell = "1"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Single codegen unit for better optimization
strip = true      # Strip symbols for smaller binary
panic = "abort"   # Smaller panic handler

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
